fix(onboarding): Correct error where token pane is too small

--- a/internal_packages/onboarding/stylesheets/onboarding.less
+++ b/internal_packages/onboarding/stylesheets/onboarding.less
@@ -353,7 +353,7 @@
 }
 .page.token-auth{
   width: 388px;
-  height: 405px;
+  min-height: 500px;
   position: relative;
 
   padding-top: 50px;
